--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "grunt-contrib-qunit": "~1.2.0",
     "grunt-contrib-uglify": "^2.3.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-sass": "^2.0.0",
     "grunt-retire": "^1.0.7",
+    "grunt-sass": "^2.0.0",
     "grunt-zip": "~0.17.1",
+    "hoek": "^5.0.3",
     "mustache": "^2.3.0",
     "socket.io": "^1.7.3"
   },
